# napari-raman-widget

./: .gitignore  LICENSE.txt  README.md  launch_napari - Shortcut.lnk  launch_napari.bat  pyproject.toml  run_napari.py
napari_raman_widget/: __init__.py  dataset.py  log_window.py  plot_windows.py  ui_helpers.py  widget.py
